# Necromancer

./: .gitignore  CMakeLists.txt
BaseInterfaces/Dungeon/: CMakeLists.txt
BaseInterfaces/Dungeon/include/Coverage/: Coverage.h  CoverageBuilder.h
BaseInterfaces/Dungeon/include/Dungeon/: Dungeon.h
BaseInterfaces/Dungeon/include/Exceptions/: DungeonExceptions.h
BaseInterfaces/Dungeon/include/Field/: Field.h
BaseInterfaces/Dungeon/include/Floor/: Floor.h
BaseInterfaces/Dungeon/include/Floor/Matrix/: Matrix.h
BaseInterfaces/Dungeon/include/SpecialElement/: SpecialElement.h  SpecialElementBuilder.h
BaseInterfaces/Dungeon/source/Dungeon/: Dungeon.cpp
BaseInterfaces/Dungeon/source/Field/: Field.cpp
BaseInterfaces/Dungeon/source/Floor/: Floor.cpp
BaseInterfaces/Enemy/: CMakeLists.txt
BaseInterfaces/Enemy/include/Enemy/: Enemy.h  EnemyBuilder.h
BaseInterfaces/Enemy/include/EnemyType/: EnemyType.h
BaseInterfaces/Enemy/include/Exceptions/: EnemyExceptions.h
BaseInterfaces/Enemy/source/: Enemy.cpp
BaseInterfaces/Enemy/source/Enemy/: Enemy.cpp
BaseInterfaces/Enemy/source/EnemyType/: EnemyType.cpp
BaseInterfaces/Entity/: CMakeLists.txt
BaseInterfaces/Entity/include/Entity/: Entity.h
BaseInterfaces/Entity/include/Exceptions/: EntityExceptions.h
BaseInterfaces/Entity/source/: Entity.cpp
BaseInterfaces/Items/: CMakeLists.txt
BaseInterfaces/Items/include/Item/: Item.h
BaseInterfaces/Items/source/: Item.cpp
BaseInterfaces/Object/: CMakeLists.txt
BaseInterfaces/Object/include/Object/: Object.h
BaseInterfaces/Object/source/: Object.cpp
BaseInterfaces/Skill/: CMakeLists.txt
BaseInterfaces/Skill/include/Exeptions/: SkillException.h
BaseInterfaces/Skill/include/MainSkill/: MainSkill.h  MainSkillBuilder.h
BaseInterfaces/Skill/include/SkillTable/: SkillTable.h
BaseInterfaces/Skill/include/SubSkill/: SubSkill.h  SubSkillBuilder.h
BaseInterfaces/Skill/source/MainSkill/: MainSkill.cpp
BaseInterfaces/Skill/source/SkillTable/: SkillTable.cpp
BaseInterfaces/Skill/source/SubSkill/: SubSkill.cpp
Controllers/: CMakeLists.txt
Controllers/Game/: CMakeLists.txt  Game.h
Controllers/Game/include/: Game.h
Controllers/Game/source/: Game.cpp
GlobalManagers/GlobalCoverageManager/: CMakeLists.txt
GlobalManagers/GlobalCoverageManager/include/: GlobalCoverageManager.h
GlobalManagers/GlobalCoverageManager/source/: GlobalCoverageManager.cpp
GlobalManagers/GlobalEnemyManager/: CMakeLists.txt
GlobalManagers/GlobalEnemyManager/include/: GlobalEnemyManager.h
GlobalManagers/GlobalEnemyManager/source/: GlobalEnemyManager.cpp
GlobalManagers/GlobalItemManager/: CMakeLists.txt
GlobalManagers/GlobalItemManager/include/: GlobalItemManager.h
GlobalManagers/GlobalItemManager/source/: GlobalItemManager.cpp
GlobalManagers/GlobalSkillManager/: CMakeLists.txt
GlobalManagers/GlobalSkillManager/include/: GlobalSkillManager.h
GlobalManagers/GlobalSkillManager/source/: GlobalSkillManager.cpp
GlobalManagers/GlobalSpecialElementManager/: CMakeLists.txt
GlobalManagers/GlobalSpecialElementManager/include/: GlobalSpecialElementManager.h
GlobalManagers/GlobalSpecialElementManager/source/: GlobalSpecialElementManager.cpp
Profiling/: CMakeLists.txt  main.cpp
Profiling/input_files/: test_dungeon.json  test_floor1.json  test_floor3.json
Test/: CMakeLists.txt  testing_main.cpp
Test/Game/: enemy_tests.hpp  loading_tests.hpp  player_skills_test.hpp
Test/Game/input_files/: simple_test_dungeon.json  test_dungeon.json  test_floor.json
Test/Matrix/: matrix_tests.hpp
UserRealizations/Coverages/: CMakeLists.txt
UserRealizations/Coverages/include/Magma/: Magma.h  MagmaBuilder.h
UserRealizations/Coverages/source/Magma/: Magma.cpp  MagmaBuilder.cpp
UserRealizations/EnemyClasses/Alive/: CMakeLists.txt
UserRealizations/EnemyClasses/Alive/include/Alive/: Alive.h
UserRealizations/EnemyClasses/Alive/include/AliveType/: AliveType.h
UserRealizations/EnemyClasses/Alive/source/Alive/: Alive.cpp
UserRealizations/EnemyClasses/Alive/source/AliveType/: AliveType.cpp
UserRealizations/EnemyClasses/Golem/: CMakeLists.txt
UserRealizations/EnemyClasses/Golem/include/Golem/: Golem.h
UserRealizations/EnemyClasses/Undead/: CMakeLists.txt
UserRealizations/EnemyTypes/AliveType/: CMakeLists.txt
UserRealizations/EnemyTypes/GolemType/: CMakeLists.txt
UserRealizations/EnemyTypes/UndeadType/: CMakeLists.txt
UserRealizations/Items/DeadBody/: CMakeLists.txt
UserRealizations/Player/: CMakeLists.txt  Exceptions.h  Player.cpp  Player.h
UserRealizations/Player/include/Exceptions/: PlayerExceptions.h
UserRealizations/Player/include/Player/: Player.h
UserRealizations/Player/source/Player/: Player.cpp
UserRealizations/Skills/Curse/: CMakeLists.txt
UserRealizations/SpecialElements/: CMakeLists.txt
UserRealizations/SpecialElements/include/Door/: Door.h  DoorBuilder.h
UserRealizations/SpecialElements/include/Ladder/: Ladder.h  LadderBuilder.h
UserRealizations/SpecialElements/include/Wall/: Wall.h  WallBuilder.h
UserRealizations/SpecialElements/source/Door/: Door.cpp  DoorBuilder.cpp
UserRealizations/SpecialElements/source/Ladder/: Ladder.cpp  LadderBuilder.cpp
UserRealizations/SpecialElements/source/Wall/: Wall.cpp  WallBuilder.cpp
View/: CMakeLists.txt  main.cpp
View/Dungeon/: CMakeLists.txt  DungeonViewController.cpp  DungeonViewController.h  Dungeon_View.cpp  Dungeon_View.h  Entity_View.cpp  Entity_View.h  Floor_View.cpp  Floor_View.h  Item_View.cpp  Item_View.h
View/Dungeon/input_files/: test_dungeon.json  test_floor1.json  test_floor2.json  test_floor3.json
View/GameView/: AdminElements.cpp  AdminElements.h  CMakeLists.txt  GameView.cpp  GameView.h  GameViewController.cpp  GameViewController.h  PlayerInfoView.cpp  PlayerInfoView.h
View/Menu/: CMakeLists.txt  MainMenu.h
View/MenuController/: CMakeLists.txt
View/MenuController/include/: MenuController.h
View/MenuController/source/: MenuController.cpp
View/MenuView/: CMakeLists.txt
View/MenuView/include/: MenuView.h
View/MenuView/source/: MenuView.cpp
test/: main.cpp
(+209 files in other folders)
