cmake_minimum_required(VERSION 3.16)
project(GlobalEnemyManager)

set(CMAKE_CXX_STANDARD 20)

add_library(GlobalEnemyManager STATIC source/GlobalEnemyManager.cpp)
set_property(TARGET GlobalEnemyManager PROPERTY POSITION_INDEPENDENT_CODE ON)

target_link_libraries(GlobalEnemyManager Alive)
target_link_libraries(GlobalEnemyManager Undead)
target_link_libraries(GlobalEnemyManager Golem)

target_link_libraries(GlobalEnemyManager Dungeon)
target_link_libraries(GlobalEnemyManager Floor)
target_link_libraries(GlobalEnemyManager Field)

target_link_libraries(GlobalEnemyManager AliveManager)
target_link_libraries(GlobalEnemyManager UndeadManager)
target_link_libraries(GlobalEnemyManager GolemManager)

target_include_directories(GlobalEnemyManager PUBLIC include)